# coderag

./: .gitignore  ANALYSIS_REPORT.md  CHANGELOG.md  Cargo.toml  INSTALL.md  Makefile  PROJECT_OVERVIEW.md  README.md
.claude/checkpoints/coderag-improvements/: phase0-plan.json  phase1-cpp-research.md  phase1-embedding-research.md  phase1-mcp-research.md  phase1-parallel-research.md  phase1-test-research.md  phase2-batch-detection-architecture.md  phase2-embedding-architecture.md  phase2-parallel-architecture.md  phase2-symbol-search-architecture.md  phase2-test-architecture.md  phase5-test-report.md  phase6-code-review.md  phase7-documentation-log.md  refactoring-summary.md
.claude/checkpoints/coderag-mvp/: phase0-plan.json  status.json
.claude/checkpoints/v0.2-v0.3/: phase2-architecture.md
.claude/checkpoints/zero-ceremony/: phase0-plan.json  phase1-context.json  phase2-architecture.md  (+1 more)
.claude/docs/: MCP_AGENT_GUIDE.md
benches/: README.md  indexing_performance.rs  search_quality.rs
benches/fixtures/: queries.json
config/: default.toml
docs/: API_DOCUMENTATION.md  CONFIGURATION.md  LANGUAGE_SUPPORT.md  MCP_TOOLS.md  MIGRATION_GUIDE.md  PERFORMANCE.md  TESTING.md
spec/: description.md  need-to-fix.md  plan.md
src/: config.rs  lib.rs  logging.rs  main.rs
src/auto_index/: mod.rs  service.rs  storage_resolver.rs
src/cli/: mod.rs
src/commands/: index.rs  init.rs  migrate.rs  mod.rs  projects.rs  search.rs  serve.rs  stats.rs  status.rs  watch.rs  web.rs
src/embeddings/: config.rs  fastembed.rs  fastembed_provider.rs  mock.rs  mod.rs  openai_provider.rs  provider.rs  registry.rs
src/indexer/: chunker.rs  mod.rs  walker.rs
src/indexing/: errors.rs  mod.rs  parallel.rs  pipeline.rs
src/mcp/: http.rs  mod.rs  server.rs
src/metrics/: mod.rs
src/project_detection/: detector.rs  markers.rs  mod.rs
src/registry/: global.rs  mod.rs  project.rs
src/search/: bm25.rs  hybrid.rs  mod.rs  traits.rs  vector.rs
src/storage/: lancedb.rs  mod.rs
src/symbol/: index.rs  mod.rs  search.rs
src/watcher/: accumulator.rs  batch_detector.rs  debouncer.rs  git_detector.rs  handler.rs  mod.rs  parallel_handler.rs
src/web/: handlers.rs  mod.rs  routes.rs  state.rs
tests/: integration_tests.rs
tests/helpers/: mock_embeddings.rs  mod.rs  test_harness.rs  test_utils.rs
tests/integration/: batch_detection_test.rs  c_cpp_language_tests.rs  language_tests.rs  mcp_server_tests.rs  mod.rs  storage_tests.rs  workflow_tests.rs
(+24 files in other folders)
